Elevator and Parking lot

--- a/sorting&searching/.settings/org.eclipse.core.resources.prefs
+++ b/sorting&searching/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/BinarySearchCeilFloor.java=UTF-8
 encoding//src/HeapSort.java=UTF-8
 encoding//src/Heap_Sort.java=UTF-8
 encoding//src/MergeSort.java=UTF-8
