--- a/leetcode/.classpath
+++ b/leetcode/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="design"/>
+	<classpathentry kind="src" path="mock"/>
 	<classpathentry kind="src" path="/questions"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
